# Student_Counselor

./: .env.example  .gitignore  CLAUDE.md  README.md  TASKS.md  TODO.md  index.html  package-lock.json  package.json
memory/: MEMORY.md  glossary.md  project-scholarpath.md  user-arnav.md
nova-agent/: pyproject.toml
nova-agent/app/: config.py  llm.py  main.py  models.py  supabase_client.py
nova-agent/app/graphs/: chat_graph.py
nova-agent/app/prompts/: system_prompts.py
nova-agent/app/services/: context.py  embeddings.py
nova-agent/app/tools/: __init__.py  program_tools.py  readiness_tools.py  story_tools.py  student_tools.py  task_tools.py  university_tools.py
nova-agent/nova_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
public/: firebase-messaging-sw.js
scripts/: embed-catalog.js  fetch-all-wiki-logos.py  fetch-wiki-individual.py  fetch-wiki-logos.py  uni-names.txt  wiki-title-overrides.json
server/: index.js
server/lib/: supabase.js
server/middleware/: auth.js
server/repositories/: catalogRepository.js
server/routes/: activityRoutes.js  catalogRoutes.js  notificationRoutes.js  novaRoutes.js
server/scripts/: backfillEmbeddings.js
server/services/: aiService.js  contextService.js  embeddingService.js  notificationService.js  novaTools.js  pdfParseService.js  reminderCron.js
shared/data/: home.js  programs.js  stories.js  universities.js
src/: App.jsx  index.css
src/api/: catalog.js  columns.js  nova.js  workspace.js
src/components/: Footer.jsx  HeroConnectionLine.jsx  LogoTile.css  LogoTile.jsx  Navbar.jsx  ProtectedRoute.jsx  (+2 more)
(+46 files in other folders)
